--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "gsap": "^3.9.1",
     "history": "4.10.1",
     "react": "^17.0.2",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-wysiwyg-typescript": "^1.0.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
+    "usehooks-ts": "^2.1.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
