--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/draft-convert": "^2.1.4",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.17",
     "@types/react": "^17.0.38",
@@ -13,6 +14,7 @@
     "@types/react-draft-wysiwyg": "^1.13.3",
     "@types/react-router-dom": "^5.2.0",
     "@types/styled-components": "^5.1.19",
+    "draft-convert": "^2.1.12",
     "gsap": "^3.9.1",
     "history": "4.10.1",
     "react": "^17.0.2",
