--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-draft-wysiwyg": "^1.13.3",
     "@types/react-router-dom": "^5.2.0",
     "@types/styled-components": "^5.1.19",
+    "axios": "^0.24.0",
     "draft-convert": "^2.1.12",
     "gsap": "^3.9.1",
     "history": "4.10.1",
