--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.0",
     "react-wysiwyg-typescript": "^1.0.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
